--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,9 +74,9 @@
                 <div class="col-lg-8 mx-auto">
                     <h2>방방곡곡?</h2>
                     <p>여행을 떠나고 싶지만 여건이 안되시는분, 다른 사람의 여행기를 즐겨 보시는분, 그들을 위해 방방곡곡이 가드립니다.
-                        <a href="/bodyy/index.html">여기</a> 를 눌러 가고싶은 여행지와 사연을 신청하세요!</p>
+                        <a href="/review">여기</a> 를 눌러 가고싶은 여행지와 사연을 신청하세요!</p>
                     <p>저희 방방곡곡에서는 여행을 좋아하는 모험심이 가득한 크루를 모집하고 있습니다
-                        <a href="/bodyy/index.html">여기</a> 를 눌러 크루에 지원하세요!
+                        <a href="/crew">여기</a> 를 눌러 크루에 지원하세요!
 
                         <p>이번주의 여행지는 <a href="https://ko.wikipedia.org/wiki/%EB%A7%8C%EB%A6%AC%EC%9E%A5%EC%84%B1">중국 만리장성</a> 으로 떠납니다. </p>
                         <a href="#download" class="btn btn-circle js-scroll-trigger">
@@ -93,7 +93,7 @@
         <div class="container">
             <div class="col-lg-8 mx-auto">
                 <h2>방방곡곡의 두번째 여행기</h2>
-                <p><a href="/bodyy/index.html">부리부리마님의 사연</a>으로 선정된 여행지 입니다.</p>
+                <p><a href="/review">부리부리마님의 사연</a>으로 선정된 여행지 입니다.</p>
                 <p> <a href="/main" class="btn btn-default btn-lg">방송 보러가기</a></p>
                 <a href="#contact" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
@@ -113,7 +113,7 @@
                 <div class="col-lg-8 mx-auto">
                     <h2>Contact 방방곡곡</h2>
                     <p> 저희 방방곡곡에서는 실력있는 개발자 여러분을 모집합니다.
-                        <a href="/bodyy/index.html">지원하기</a> 트위터, 페이스북, 인스타그램에 저희 방방곡곡을 알려주세요</p>
+                        <a href="/notice">지원하기</a> 트위터, 페이스북, 인스타그램에 저희 방방곡곡을 알려주세요</p>
                     <ul class="list-inline banner-social-buttons">
                         <li class="list-inline-item">
                             <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
