--- a/views/index.ejs
+++ b/views/index.ejs
@@ -112,8 +112,8 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2>Contact 방방곡곡</h2>
-                    <p> 저희 방방곡곡에서는 실력있는 개발자 여러분을 모집합니다.
-                        <a href="/notice">지원하기</a> 트위터, 페이스북, 인스타그램에 저희 방방곡곡을 알려주세요</p>
+                    <p>
+                        트위터, 페이스북, 인스타그램에 저희 방방곡곡을 알려주세요</p>
                     <ul class="list-inline banner-social-buttons">
                         <li class="list-inline-item">
                             <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
