--- a/views/story.ejs
+++ b/views/story.ejs
@@ -46,14 +46,12 @@
                     <a href="/review">방송 후기 남기기</a>
                 </li>
                 <li>
-                    <a href="#">크루들의 공간</a>
+                    <a href="/crew">크루들의 공간</a>
                 </li>
                 <li>
                     <a href="#">지원하기</a>
                 </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
+               
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
