--- a/public/css/simple-sidebar.css
+++ b/public/css/simple-sidebar.css
@@ -208,7 +208,7 @@ textarea{
 
 .chat-messages {
     width:100%;
-    height:300px;
+    height:150px;
     overflow-y:scroll;
     padding:10px;
 }
@@ -231,7 +231,7 @@ textarea{
 }
 
 .chat-status {
-    color:#bbb;
+    color:yellow;
 }
 
 .chat textarea,
