--- a/views/main.ejs
+++ b/views/main.ejs
@@ -240,6 +240,33 @@
             $("#wrapper").toggleClass("toggled");
         });
     </script>
+    
+    <!-- Channel Plugin Scripts -->
+<script>
+  window.channelPluginSettings = {
+    "plugin_id": "73160b9b-184d-4f6f-a0b0-4f758715165c"
+  };
+  (function() {
+    var node = document.createElement('div');
+    node.id = 'ch-plugin';
+    document.body.appendChild(node);
+    var async_load = function() {
+      var s = document.createElement('script');
+      s.type = 'text/javascript';
+      s.async = true;
+      s.src = 'https://cdn.channel.io/plugin/ch-plugin-web.js';
+      s.charset = 'UTF-8';
+      var x = document.getElementsByTagName('script')[0];
+      x.parentNode.insertBefore(s, x);
+    };
+    if (window.attachEvent) {
+      window.attachEvent('onload', async_load);
+    } else {
+      window.addEventListener('load', async_load, false);
+    }
+  })();
+</script>
+<!-- End Channel Plugin -->
 
 </body>
 
