--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,7 +76,7 @@
                     <p>여행을 떠나고 싶지만 여건이 안되시는분, 다른 사람의 여행기를 즐겨 보시는분, 그들을 위해 방방곡곡이 가드립니다.
                         <a href="/review">여기</a> 를 눌러 가고싶은 여행지와 사연을 신청하세요!</p>
                     <p>저희 방방곡곡에서는 여행을 좋아하는 모험심이 가득한 크루를 모집하고 있습니다
-                        <a href="/crew">여기</a> 를 눌러 크루에 지원하세요!
+                        <a href="https://bangbanggokgok.channel.io">여기</a> 를 눌러 크루에 지원하세요!
 
                         <p>이번주의 여행지는 <a href="https://ko.wikipedia.org/wiki/%EB%A7%8C%EB%A6%AC%EC%9E%A5%EC%84%B1">중국 만리장성</a> 으로 떠납니다. </p>
                         <a href="#download" class="btn btn-circle js-scroll-trigger">
