--- a/views/index.ejs
+++ b/views/index.ejs
@@ -116,19 +116,19 @@
                         트위터, 페이스북, 인스타그램에 저희 방방곡곡을 알려주세요</p>
                     <ul class="list-inline banner-social-buttons">
                         <li class="list-inline-item">
-                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
+                            <a href="https://twitter.com/banggok_offical" class="btn btn-default btn-lg">
                   <i class="fa fa-twitter fa-fw"></i>
                   <span class="network-name">Twitter</span>
                 </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg">
+                            <a href="https://www.facebook.com/profile.php?id=100023368099718">
                   <i class="fa fa-facebook fa-fw"></i>
                   <span class="network-name">Facebook</span>
                 </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg">
+                            <a href="https://www.instagram.com/banggok_official/" class="btn btn-default btn-lg">
                   <i class="fa fa-instagram fa-fw"></i>
                   <span class="network-name">Instagram</span>
                 </a>
