--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,7 +122,7 @@
                 </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="https://www.facebook.com/profile.php?id=100023368099718">
+                            <a href="https://www.facebook.com/profile.php?id=100023368099718" class="btn btn-default btn-lg">
                   <i class="fa fa-facebook fa-fw"></i>
                   <span class="network-name">Facebook</span>
                 </a>
