지원하기 삭제

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -59,9 +59,7 @@
                 <li>
                     <a href="/review">방송 후기 남기기</a>
                 </li>
-                <li>
-                    <a href="/notice">지원하기</a>
-                </li>
+              
                 
             </ul>
         </div>
@@ -134,7 +132,7 @@
                 <textarea class="sendchat" placeholder="메세지를 입력하세요"></textarea>
                 <button>전송하기</button>
             </div>
-            <div class="chat-status">Status:<span>채팅서버 활성화</span></div>ddddd
+            <div class="chat-status">Status:<span>채팅서버 활성화</span></div>
         </div>
 
     </div>
