--- a/views/main.ejs
+++ b/views/main.ejs
@@ -11,136 +11,166 @@
     <title>방방곡곡 홈페이지</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.css">
     <!-- Custom styles for this template -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="/css/simple-sidebar.css" rel="stylesheet">
+    <link rel="stylesheet" href="/vendor/bootstrap/css/style.css">
+    <link href="/vendor/bootstrap/css/style-responsive.css" rel="stylesheet">
+    <link href="/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
     <style>
-        .send{
-            position:relative;
+        .send {
+            position: relative;
             padding-right: 6rem;
         }
-        button{
-            position:absolute;
-            bottom:0.1rem;
-            right:10px;
+
+        button {
+            position: absolute;
+            bottom: 0.1rem;
+            right: 10px;
             height: 100%
         }
 
-        textarea{
-          display:block;
+        textarea {
+            display: block;
         }
     </style>
 </head>
 
 <body>
-    <a href="#menu-toggle" id="menu-toggle">
-        <i class="fa fa-bars tooltips"></i>
-    </a>
     <div id="wrapper">
         <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="/">
-                        홈으로
-                    </a>
-                </li>
-                <li>
-                    <a href="/main">방송 화면</a>
-                </li>
-                <li>
-                    <a href="/notice">공지사항</a>
-                </li>
-                <li>
-                    <a href="/story">여행지 신청하기</a>
-                </li>
-                <li>
-                    <a href="/review">방송 후기 남기기</a>
-                </li>
-              
-                
-            </ul>
+        <div id="toggle-menu" class="sidebar-toggle-box">
+            <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
         </div>
+        <!-- Sidebar -->
+        <aside>
+            <div id="sidebar" class="nav-collapse">
+                <ul class="sidebar-menu" id="nav-accordion">
+                    <h3 class="centered" style="color:bisque">방방곡곡</h3>
+                    <li class="mt">
+                        <a href="/">
+                            <i class="fa fa-dashboard" style="color:#20B38E"></i>
+                            <span style="color:#20B38E">홈화면</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/main" style="color:deeppink;">
+                            <i class="fa fa-desktop" style="color:deeppink;"></i>
+                            <span>방송 화면</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/story" style="color:darkorange">
+                            <i class=" fa fa-bar-chart-o" style="color:darkorange"></i>
+                            <span>여행지 신청하기</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/review" style="color:darkseagreen">
+                            <i class="fa fa-tasks" style="color:darkseagreen"></i>
+                            <span>후기 남기기</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/review" style="color:darkblue">
+                            <i class="fa fa-tasks" style="color:darkblue"></i>
+                            <span>공지사항</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </aside>
         <!-- /#sidebar-wrapper -->
+        <section id="main-content">
+            <!-- Page Content -->
+            <div id="page-content-wrapper">
+                <div class="youtubeWrap">
 
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <div class="youtubeWrap">
+                    <script>
+                        // 2. This code loads the IFrame Player API code asynchronously.
+                        var tag = document.createElement('script');
 
-                <script>
-                    // 2. This code loads the IFrame Player API code asynchronously.
-                    var tag = document.createElement('script');
+                        tag.src = "https://www.youtube.com/iframe_api";
+                        var firstScriptTag = document.getElementsByTagName('script')[0];
+                        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
-                    tag.src = "https://www.youtube.com/iframe_api";
-                    var firstScriptTag = document.getElementsByTagName('script')[0];
-                    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+                        // 3. This function creates an <iframe> (and YouTube player)
+                        //    after the API code downloads.
+                        var player;
 
-                    // 3. This function creates an <iframe> (and YouTube player)
-                    //    after the API code downloads.
-                    var player;
+                        function onYouTubeIframeAPIReady() {
+                            player = new YT.Player('page-content-wrapper', {
+                                height: '560',
+                                width: '315',
+                                videoId: 'vDxD4HwEFdY',
 
-                    function onYouTubeIframeAPIReady() {
-                        player = new YT.Player('page-content-wrapper', {
-                            height: '560',
-                            width: '315',
-                            videoId: 'vDxD4HwEFdY',
-
-                            events: {
-                                'onReady': onPlayerReady,
-                                'onStateChange': onPlayerStateChange
-                            }
-                        });
-                    }
-
-                    // 4. The API will call this function when the video player is ready.
-                    function onPlayerReady(event) {
-                        event.target.playVideo();
-                    }
-
-                    // 5. The API calls this function when the player's state changes.
-                    //    The function indicates that when playing a video (state=1),
-                    //    the player should play for six seconds and then stop.
-                    var done = false;
-
-                    function onPlayerStateChange(event) {
-                        if (event.data == YT.PlayerState.PLAYING && !done) {
-                            setTimeout(stopVideo, 60000000);
-                            done = true;
+                                events: {
+                                    'onReady': onPlayerReady,
+                                    'onStateChange': onPlayerStateChange
+                                }
+                            });
                         }
-                    }
 
-                    function stopVideo() {
-                        player.stopVideo();
-                    }
-                </script>
+                        // 4. The API will call this function when the video player is ready.
+                        function onPlayerReady(event) {
+                            event.target.playVideo();
+                        }
+
+                        // 5. The API calls this function when the player's state changes.
+                        //    The function indicates that when playing a video (state=1),
+                        //    the player should play for six seconds and then stop.
+                        var done = false;
+
+                        function onPlayerStateChange(event) {
+                            if (event.data == YT.PlayerState.PLAYING && !done) {
+                                setTimeout(stopVideo, 60000000);
+                                done = true;
+                            }
+                        }
+
+                        function stopVideo() {
+                            player.stopVideo();
+                        }
+                    </script>
+                </div>
+
+                <div class="container-fluid">
+
+
+                </div>
             </div>
-
-            <div class="container-fluid">
-
-
+            <!-- /#page-content-wrapper -->
+            <div id="addiv"><img src="img/ad.JPG">
             </div>
-        </div>
-        <!-- /#page-content-wrapper -->
-        <div id="addiv"><img src="img/ad.JPG">
-        </div>
-        <div class="chat">
-            <input type="text" class="chat-name" placeholder="이름을 입력하세요">
-            <div class="chat-messages"></div>
-            <div class="send">
-                <textarea class="sendchat" placeholder="메세지를 입력하세요"></textarea>
-                <button>전송하기</button>
+            <div class="chat">
+                <input type="text" class="chat-name" placeholder="이름을 입력하세요">
+                <div class="chat-messages"></div>
+                <div class="send">
+                    <textarea class="sendchat" placeholder="메세지를 입력하세요"></textarea>
+                    <button>전송하기</button>
+                </div>
+                <div class="chat-status">Status:<span>채팅서버 활성화</span></div>ddddd
             </div>
-            <div class="chat-status">Status:<span>채팅서버 활성화</span></div>
-        </div>
-
+        </section>
     </div>
     <!-- /#wrapper -->
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom scripts for all pages-->
+    <script src="/js/sb-admin.min.js"></script>
+    <!-- Core plugin JavaScript-->
+    <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <!-- Page level plugin JavaScript-->
+    <script src="/vendor/datatables/jquery.dataTables.js"></script>
+    <script src="/vendor/datatables/dataTables.bootstrap4.js"></script>
+    <script src="/vendor/bootstrap/js/common-scripts.js"></script>
+    <!-- Custom scripts for this page-->
+    <script src="/js/sb-admin-datatables.min.js"></script>
+
 
     <!-- server core script -->
     <script src="https://stark-plateau-86360.herokuapp.com/socket.io/socket.io.js"></script>
@@ -213,32 +243,23 @@
                         event.preventDefault();
                     }
                 });
-                
-                button.addEventListener('click',function(event){
+
+                button.addEventListener('click', function(event) {
                     var text = textarea.value,
                         name = chatName.value;
 
-                        socket.emit('input', {
-                            name: name,
-                            message: text
-                        });
-                        event.preventDefault();
+                    socket.emit('input', {
+                        name: name,
+                        message: text
+                    });
+                    event.preventDefault();
                 });
-                
+
             }
 
 
         })();
     </script>
-
-    <!-- Menu Toggle Script -->
-    <script>
-        $("#menu-toggle").click(function(e) {
-            e.preventDefault();
-            $("#wrapper").toggleClass("toggled");
-        });
-    </script>
-    
     <!-- Channel Plugin Scripts -->
 <script>
   window.channelPluginSettings = {
