--- a/views/review.ejs
+++ b/views/review.ejs
@@ -11,44 +11,58 @@
     <title>방방곡곡 홈페이지</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.css">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.css">
     <!-- Custom styles for this template -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
-    <link href="vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
+    <link href="/css/simple-sidebar.css" rel="stylesheet">
+    <link rel="stylesheet" href="/vendor/bootstrap/css/style.css">
+    <link href="/vendor/bootstrap/css/style-responsive.css" rel="stylesheet">
+    <link href="/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
 </head>
 
 <body>
-    <a href="#menu-toggle" id="menu-toggle">
-        <i class="fa fa-bars tooltips"></i>
-    </a>
-    <div id="wrapper">
-
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="/">
-                        홈으로
-                    </a>
-                </li>
-                <li>
-                    <a href="/main">방송 화면</a>
-                </li>
-                <li>
-                    <a href="/notice">공지사항</a>
-                </li>
-                <li>
-                    <a href="/story">여행지 신청하기</a>
-                </li>
-                <li>
-                    <a href="/review">방송 후기 남기기</a>
-                </li>
-              
-               
-            </ul>
+    <div id="toggle-menu" class="sidebar-toggle-box">
+            <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
         </div>
+        <!-- Sidebar -->
+        <aside>
+            <div id="sidebar" class="nav-collapse">
+                <ul class="sidebar-menu" id="nav-accordion">
+                    <h3 class="centered" style="color:bisque">방방곡곡</h3>
+                    <li class="mt">
+                        <a href="/">
+                            <i class="fa fa-dashboard" style="color:#20B38E"></i>
+                            <span style="color:#20B38E">홈화면</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/main" style="color:deeppink;">
+                            <i class="fa fa-desktop" style="color:deeppink;"></i>
+                            <span>방송 화면</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/story" style="color:darkorange">
+                            <i class=" fa fa-bar-chart-o" style="color:darkorange"></i>
+                            <span>여행지 신청하기</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/review" style="color:darkseagreen">
+                            <i class="fa fa-tasks" style="color:darkseagreen"></i>
+                            <span>후기 남기기</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/review" style="color:darkblue">
+                            <i class="fa fa-tasks" style="color:darkblue"></i>
+                            <span>공지사항</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </aside>
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
@@ -97,111 +111,30 @@
                 <a class="write-btn btn" href="/review_write"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
                 <!--/row -->
             </section>
+             <div id="addiv"><img src="img/ad.JPG">
+        </div>
         </section>
         <!-- /#page-content-wrapper -->
         <br>
-        <div id="addiv"><img src="img/ad.JPG">
-        </div>
+       
         
 
-    </div>
+   
     <!-- /#wrapper -->
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin.min.js"></script>
+    <script src="/js/sb-admin.min.js"></script>
     <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
     <!-- Page level plugin JavaScript-->
-    <script src="vendor/datatables/jquery.dataTables.js"></script>
-    <script src="vendor/datatables/dataTables.bootstrap4.js"></script>
+    <script src="/vendor/datatables/jquery.dataTables.js"></script>
+    <script src="/vendor/datatables/dataTables.bootstrap4.js"></script>
+    <script src="/vendor/bootstrap/js/common-scripts.js"></script>
     <!-- Custom scripts for this page-->
-    <script src="js/sb-admin-datatables.min.js"></script>
-    <!-- server core script -->
-    <script src="http://127.0.0.1:8080/socket.io/socket.io.js"></script>
-    <script>
-        (function() {
-            var getNode = function(s) {
-                    return document.querySelector(s);
-                },
-
-                status = getNode('.chat-status span'),
-                messages = getNode('.chat-messages'),
-                textarea = getNode('.chat textarea'),
-                chatName = getNode('.chat-name'),
-
-                statusDefault = status.textContent,
-
-                setStatus = function(s) {
-                    status.textContent = s;
-
-
-                    if (s !== statusDefault) {
-                        var delay = setTimeout(function() {
-                            setStatus(statusDefault);
-                            clearInterval(delay);
-                        }, 3000);
-                    }
-                };
-
-            setStatus('채팅 서버 대기중');
-
-            try {
-                var socket = io.connect('http://127.0.0.1:8080');
-            } catch (e) {}
-            if (socket !== undefined) {
-
-                socket.on('output', function(data) {
-                    if (data.length) {
-                        for (var x = 0; x < data.length; x = x + 1) {
-                            var message = document.createElement('div');
-                            message.setAttribute('class', 'chat-message');
-                            message.textContent = data[x].name + ':' + data[x].message;
-
-                            messages.appendChild(message);
-                            messages.insertBefore(message, messages.firstChild);
-                        }
-                    }
-                });
-
-                socket.on('status', function(data) {
-                    setStatus((typeof data === 'object') ? data.message : data);
-
-                    if (data.clear === true) {
-                        textarea.value = '';
-                    }
-                });
-
-
-                textarea.addEventListener('keydown', function(event) {
-                    var self = this,
-                        name = chatName.value;
-
-
-
-                    if (event.which === 13 && event.shiftKey === false) {
-                        socket.emit('input', {
-                            name: name,
-                            message: self.value
-                        });
-                        event.preventDefault();
-                    }
-                });
-            }
-
-
-        })();
-    </script>
-
-    <!-- Menu Toggle Script -->
-    <script>
-        $("#menu-toggle").click(function(e) {
-            e.preventDefault();
-            $("#wrapper").toggleClass("toggled");
-        });
-    </script>
+    <script src="/js/sb-admin-datatables.min.js"></script>
     <!-- Channel Plugin Scripts -->
 <script>
   window.channelPluginSettings = {
