--- a/views/review_write.ejs
+++ b/views/review_write.ejs
@@ -11,44 +11,58 @@
     <title>방방곡곡 홈페이지</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.css">    
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.css">
     <!-- Custom styles for this template -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
-    <link href="vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
+    <link href="/css/simple-sidebar.css" rel="stylesheet">
+    <link rel="stylesheet" href="/vendor/bootstrap/css/style.css">
+    <link href="/vendor/bootstrap/css/style-responsive.css" rel="stylesheet">
+    <link href="/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
 </head>
 
 <body>
-    <a href="#menu-toggle" id="menu-toggle">
-        <i class="fa fa-bars tooltips"></i>
-    </a>
-    <div id="wrapper">
-
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="/">
-                        홈으로
-                    </a>
-                </li>
-                <li>
-                    <a href="/main">방송 화면</a>
-                </li>
-                <li>
-                    <a href="/notice">공지사항</a>
-                </li>
-                <li>
-                    <a href="/story">여행지 신청하기</a>
-                </li>
-                <li>
-                    <a href="/review">방송 후기 남기기</a>
-                </li>
-   
-                
-            </ul>
+    <div id="toggle-menu" class="sidebar-toggle-box">
+            <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
         </div>
+        <!-- Sidebar -->
+        <aside>
+            <div id="sidebar" class="nav-collapse">
+                <ul class="sidebar-menu" id="nav-accordion">
+                    <h3 class="centered" style="color:bisque">방방곡곡</h3>
+                    <li class="mt">
+                        <a href="/">
+                            <i class="fa fa-dashboard" style="color:#20B38E"></i>
+                            <span style="color:#20B38E">홈화면</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/main" style="color:deeppink;">
+                            <i class="fa fa-desktop" style="color:deeppink;"></i>
+                            <span>방송 화면</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/story" style="color:darkorange">
+                            <i class=" fa fa-bar-chart-o" style="color:darkorange"></i>
+                            <span>여행지 신청하기</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/review" style="color:darkseagreen">
+                            <i class="fa fa-tasks" style="color:darkseagreen"></i>
+                            <span>후기 남기기</span>
+                        </a>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="/review" style="color:darkblue">
+                            <i class="fa fa-tasks" style="color:darkblue"></i>
+                            <span>공지사항</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </aside>
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
@@ -78,106 +92,23 @@
         <br>
         
 
-    </div>
+  
     <!-- /#wrapper -->
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin.min.js"></script>
+    <script src="/js/sb-admin.min.js"></script>
     <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
     <!-- Page level plugin JavaScript-->
-    <script src="vendor/datatables/jquery.dataTables.js"></script>
-    <script src="vendor/datatables/dataTables.bootstrap4.js"></script>
+    <script src="/vendor/datatables/jquery.dataTables.js"></script>
+    <script src="/vendor/datatables/dataTables.bootstrap4.js"></script>
+    <script src="/vendor/bootstrap/js/common-scripts.js"></script>
     <!-- Custom scripts for this page-->
-    <script src="js/sb-admin-datatables.min.js"></script>
-    <!-- server core script -->
-    <script src="http://127.0.0.1:8080/socket.io/socket.io.js"></script>
-    <script>
-        (function() {
-            var getNode = function(s) {
-                    return document.querySelector(s);
-                },
-
-                title = getNode('.container form .title'),
-                content = getNode('.container form .content'),
-                send = getNode('.container form .send'),
-
-
-            try {
-                var socket = io.connect('http://127.0.0.1:8080');
-            } catch (e) {}
-            if (socket !== undefined) {
-
-                socket.on('output', function(data) {
-                    if (data.length) {
-                        for (var x = 0; x < data.length; x = x + 1) {
-                            
-                        }
-                    }
-                });
-
-                socket.on('status', function(data) {
-                    setStatus((typeof data === 'object') ? data.message : data);
-
-                    if (data.clear === true) {
-                        textarea.value = '';
-                    }
-                });
-
-
-                send.addEventListener('click', function(event) {
-                    var board_content = content.value,
-                        board_title = content.value,
-                        user_name = name.value;
-                    
-                        socket.emit('input', {
-                            board_content: board_content,
-                            board_title: board_title,
-                            user_name = name
-                        });
-                });
-            }
-
-
-        })();
-    </script>
-
-    <!-- Menu Toggle Script -->
-    <script>
-        $("#menu-toggle").click(function(e) {
-            e.preventDefault();
-            $("#wrapper").toggleClass("toggled");
-        });
-    </script>
-<!-- Channel Plugin Scripts -->
-<script>
-  window.channelPluginSettings = {
-    "plugin_id": "73160b9b-184d-4f6f-a0b0-4f758715165c"
-  };
-  (function() {
-    var node = document.createElement('div');
-    node.id = 'ch-plugin';
-    document.body.appendChild(node);
-    var async_load = function() {
-      var s = document.createElement('script');
-      s.type = 'text/javascript';
-      s.async = true;
-      s.src = 'https://cdn.channel.io/plugin/ch-plugin-web.js';
-      s.charset = 'UTF-8';
-      var x = document.getElementsByTagName('script')[0];
-      x.parentNode.insertBefore(s, x);
-    };
-    if (window.attachEvent) {
-      window.attachEvent('onload', async_load);
-    } else {
-      window.addEventListener('load', async_load, false);
-    }
-  })();
-</script>
-<!-- End Channel Plugin -->
+    <script src="/js/sb-admin-datatables.min.js"></script>
+    
 
 </body>
 
