색깔변경 순서변경

--- a/views/notice.ejs
+++ b/views/notice.ejs
@@ -30,10 +30,16 @@
             <div id="sidebar" class="nav-collapse">
                 <ul class="sidebar-menu" id="nav-accordion">
                     <h3 class="centered" style="color:bisque">방방곡곡</h3>
-                    <li class="mt">
+                  <li class="mt">
                         <a href="/">
                             <i class="fa fa-dashboard" style="color:#20B38E"></i>
                             <span style="color:#20B38E">홈화면</span>
+                        </a>
+                    </li>
+                     <li class="sub-menu">
+                        <a href="/review" style="color:yellow">
+                            <i class="fa fa-tasks" style="color:yellow"></i>
+                            <span>공지사항</span>
                         </a>
                     </li>
                     <li class="sub-menu">
@@ -54,12 +60,7 @@
                             <span>후기 남기기</span>
                         </a>
                     </li>
-                    <li class="sub-menu">
-                        <a href="/review" style="color:darkblue">
-                            <i class="fa fa-tasks" style="color:darkblue"></i>
-                            <span>공지사항</span>
-                        </a>
-                    </li>
+                   
                 </ul>
             </div>
         </aside>
