--- a/views/main.ejs
+++ b/views/main.ejs
@@ -49,10 +49,16 @@
             <div id="sidebar" class="nav-collapse">
                 <ul class="sidebar-menu" id="nav-accordion">
                     <h3 class="centered" style="color:bisque">방방곡곡</h3>
-                    <li class="mt">
+                   <li class="mt">
                         <a href="/">
                             <i class="fa fa-dashboard" style="color:#20B38E"></i>
                             <span style="color:#20B38E">홈화면</span>
+                        </a>
+                    </li>
+                     <li class="sub-menu">
+                        <a href="/review" style="color:yellow">
+                            <i class="fa fa-tasks" style="color:yellow"></i>
+                            <span>공지사항</span>
                         </a>
                     </li>
                     <li class="sub-menu">
@@ -71,12 +77,6 @@
                         <a href="/review" style="color:darkseagreen">
                             <i class="fa fa-tasks" style="color:darkseagreen"></i>
                             <span>후기 남기기</span>
-                        </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="/review" style="color:darkblue">
-                            <i class="fa fa-tasks" style="color:darkblue"></i>
-                            <span>공지사항</span>
                         </a>
                     </li>
                 </ul>
@@ -151,7 +151,7 @@
                     <textarea class="sendchat" placeholder="메세지를 입력하세요"></textarea>
                     <button>전송하기</button>
                 </div>
-                <div class="chat-status">Status:<span>채팅서버 활성화</span></div>ddddd
+                <div class="chat-status">Status:<span>채팅서버 활성화</span></div>
             </div>
         </section>
     </div>
