--- a/views/story.ejs
+++ b/views/story.ejs
@@ -31,10 +31,16 @@
             <div id="sidebar" class="nav-collapse">
                 <ul class="sidebar-menu" id="nav-accordion">
                     <h3 class="centered" style="color:bisque">방방곡곡</h3>
-                    <li class="mt">
+                 <li class="mt">
                         <a href="/">
                             <i class="fa fa-dashboard" style="color:#20B38E"></i>
                             <span style="color:#20B38E">홈화면</span>
+                        </a>
+                    </li>
+                     <li class="sub-menu">
+                        <a href="/review" style="color:yellow">
+                            <i class="fa fa-tasks" style="color:yellow"></i>
+                            <span>공지사항</span>
                         </a>
                     </li>
                     <li class="sub-menu">
@@ -53,12 +59,6 @@
                         <a href="/review" style="color:darkseagreen">
                             <i class="fa fa-tasks" style="color:darkseagreen"></i>
                             <span>후기 남기기</span>
-                        </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="/review" style="color:darkblue">
-                            <i class="fa fa-tasks" style="color:darkblue"></i>
-                            <span>공지사항</span>
                         </a>
                     </li>
                 </ul>
