사연 링크추가

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,7 +93,7 @@
         <div class="container">
             <div class="col-lg-8 mx-auto">
                 <h2>방방곡곡의 두번째 여행기</h2>
-                <p><a href="/review">부리부리마님의 사연</a>으로 선정된 여행지 입니다.</p>
+                <p><a href="/story/6">부리부리마님의 사연</a>으로 선정된 여행지 입니다.</p>
                 <p> <a href="/main" class="btn btn-default btn-lg">방송 보러가기</a></p>
                 <a href="#contact" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
