아이콘 색깔변경

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -42,7 +42,7 @@
     <div id="wrapper">
         <!-- Sidebar -->
         <div id="toggle-menu" class="sidebar-toggle-box">
-            <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
+            <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation" style="color:black"></div>
         </div>
         <!-- Sidebar -->
         <aside>
