--- a/views/notice.ejs
+++ b/views/notice.ejs
@@ -23,7 +23,7 @@
 
 <body>
     <div id="toggle-menu" class="sidebar-toggle-box">
-            <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
+            <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation" style="color:black"></div>
         </div>
         <!-- Sidebar -->
         <aside>
