--- a/views/story.ejs
+++ b/views/story.ejs
@@ -24,7 +24,7 @@
 <body>
     <div id="wrapper">
         <div id="toggle-menu" class="sidebar-toggle-box">
-            <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
+            <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation" style="color:black"></div>
         </div>
         <!-- Sidebar -->
         <aside>
