--- a/views/story_content.ejs
+++ b/views/story_content.ejs
@@ -73,7 +73,7 @@
                 </div>
                 <div class="container">
                     <div>
-                      <div>자유게시판 작성하기</div>
+                      <div>사연</div>
                            <div>
                              <label>제목:</label>
                              <div class="title"> <%= story[0].Story_Title %> </div>
