--- a/views/story_content.ejs
+++ b/views/story_content.ejs
@@ -19,82 +19,91 @@
     <link rel="stylesheet" href="/vendor/bootstrap/css/style.css">
     <link href="/vendor/bootstrap/css/style-responsive.css" rel="stylesheet">
     <link href="/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
+    
 </head>
 
 <body>
     <div id="toggle-menu" class="sidebar-toggle-box">
-            <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation" style="color:black"></div>
-        </div>
-        <!-- Sidebar -->
-        <aside>
-            <div id="sidebar" class="nav-collapse">
-                <ul class="sidebar-menu" id="nav-accordion">
-                    <h3 class="centered" style="color:bisque">방방곡곡</h3>
-                 <li class="mt">
-                        <a href="/">
+        <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation" style="color:black"></div>
+    </div>
+    <!-- Sidebar -->
+    <aside>
+        <div id="sidebar" class="nav-collapse">
+            <ul class="sidebar-menu" id="nav-accordion">
+                <h3 class="centered" style="color:bisque">방방곡곡</h3>
+                <li class="mt">
+                    <a href="/">
                             <i class="fa fa-dashboard" style="color:#20B38E"></i>
                             <span style="color:#20B38E">홈화면</span>
                         </a>
-                    </li>
-                     <li class="sub-menu">
-                        <a href="/review" style="color:yellow">
+                </li>
+                <li class="sub-menu">
+                    <a href="/review" style="color:yellow">
                             <i class="fa fa-tasks" style="color:yellow"></i>
                             <span>공지사항</span>
                         </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="/main" style="color:deeppink;">
+                </li>
+                <li class="sub-menu">
+                    <a href="/main" style="color:deeppink;">
                             <i class="fa fa-desktop" style="color:deeppink;"></i>
                             <span>방송 화면</span>
                         </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="/story" style="color:darkorange">
+                </li>
+                <li class="sub-menu">
+                    <a href="/story" style="color:darkorange">
                             <i class=" fa fa-bar-chart-o" style="color:darkorange"></i>
                             <span>여행지 신청하기</span>
                         </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="/review" style="color:darkseagreen">
+                </li>
+                <li class="sub-menu">
+                    <a href="/review" style="color:darkseagreen">
                             <i class="fa fa-tasks" style="color:darkseagreen"></i>
                             <span>후기 남기기</span>
                         </a>
-                    </li>
-                </ul>
+                </li>
+            </ul>
+        </div>
+    </aside>
+    <!-- /#sidebar-wrapper -->
+
+    <!-- Page Content -->
+    <section id="main-content">
+        <section class="wrapper">
+            <div align='center'>
+                <a href="admin" class="logo"><b><%= story[0].User_Name %>님의 사연입니다.</b></a>
             </div>
-        </aside>
-        <!-- /#sidebar-wrapper -->
-
-        <!-- Page Content -->
-        <section id="main-content">
-            <section class="wrapper">
-                <div align='center'>
-                    <a href="admin" class="logo"><b>방방곡곡</b></a>
-                </div>
-                <div class="container">
+            <div class="container">
+                <div class="story_contents">
                     <div>
-                      <div>사연</div>
-                           <div>
-                             <label>제목:</label>
-                             <div class="title"> <%= story[0].Story_Title %> </div>
-                             <label>작성자:</label>
-                             <div class="name"> <%= story[0].User_Name %> </div>  
-                           </div>
-                            <textarea style="font-size:20px;" rows="15" name="content" placeholder="사연을 적어주세요!">
-                                <%= story[0].Story_Content %>
-                            </textarea>
-                        <form action="">
-                            <input type="submit" class="send btn-lg pull-right btn-border" style="margin-right:50px;" value="돌아가기">
-                        </form>
+                        <div>
+                            <span> 제  목 : </span>
+                            <span><%= story[0].Story_Title %></span>
+                        </div>
+                        <div>
+                            <span> 작성자 : </span>
+                            <span><%= story[0].User_Name %></span>
+                        </div>
+                        <div>
+                            <span> 작성일 : </span>
+                            <span><%=  new Date(story[0].Story_Date).toLocaleString() %></span>
+                        </div>
                     </div>
+                    <div>내용</div>
+                    <div class="content_content">
+                        <%= story[0].Story_Content %>
+                    </div>
+                    <form action="/story">
+                        <input type="submit" class="send btn-lg btn-border" value="돌아가기">
+                    </form>
                 </div>
-            </section>
+            </div>
         </section>
-        <!-- /#page-content-wrapper -->
-        <br>
-        
+    </section>
+    <!-- /#page-content-wrapper -->
+    <br>
 
-    
+
+
     <!-- /#wrapper -->
 
     <!-- Bootstrap core JavaScript -->
@@ -111,7 +120,7 @@
     <script src="/vendor/bootstrap/js/common-scripts.js"></script>
     <!-- Custom scripts for this page-->
     <script src="/js/sb-admin-datatables.min.js"></script>
-    
+
 
 </body>
 
